# 2d-sfml-game

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ConsoleApplication1.sln  README.md
ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Game.cpp  Game.h  constants.cpp  constants.h  initialization.cpp  main.cpp  param.conf
ConsoleApplication1/Animation/: Animation.cpp  Animation.h  ManageAnimation.cpp  ManageAnimation.h
ConsoleApplication1/Battle/: B_Event.cpp  B_Event.h  B_EventAttack.cpp  B_EventAttack.h  B_EventDefense.cpp  B_EventDefense.h  B_EventEscape.cpp  B_EventEscape.h  B_EventSpell.cpp  Battle.cpp  Battle.h  BattleEffects.cpp  BattleEffects.h  BattleEventManager.cpp  BattleEventManager.h  CharCourb.cpp  CharCourb.h  Characteristic.cpp  Characteristic.h  EffectOnCharacteristic.cpp  EnemiBasic.cpp  EnemiBasic.h  EnemiBoss.cpp  EnemiBoss.h  Enemies.cpp  Enemies.h  Fighter.cpp  Fighter.h  Health.cpp  Health.h  Mana.cpp  Mana.h  SkillPoints.cpp  SkillPoints.h  Spell.cpp  Spell.h  TeamBattle.cpp  TeamBattle.h  TeamMate.cpp  TeamMate.h
ConsoleApplication1/Database/: DatabaseJson.cpp  DatabaseJson.h
ConsoleApplication1/Error/: GameException.cpp  GameException.h  InitializationException.h  RessourceException.h  ValueException.cpp  ValueException.h  (+2 more)
Projet test/: Projet test.cpp  Projet test.vcxproj  Projet test.vcxproj.filters  ReadMe.txt  stdafx.cpp
Test/: Test.vcxproj  main.cpp
data/: keyev.conf
src/: Game.cpp  Game.h  constants.cpp  constants.h  initialization.cpp  initialization.h  main.cpp
(+250 files in other folders)
